--- a/Любовь к себе.md
+++ b/Любовь к себе.md
@@ -9,6 +9,22 @@ Tags: #
 - Любите себя и принимайте себя полностью
 - Если вы чувствуете что устали сделайте перерыв и напомните себе как вы себя любите
 
+
+Что такое любить себя?
+- Испытывать эмоцию любви к себе, не ставить условий не планировать (как накачаюсь буду себя любить - это условие, ты уже начал заниматся уважай это, уважай свой выбор и тело что оно дает тебе силы)
+- Быть добрым к себе, прощать мелкие ошибки, не урядицы, слабости 
+- Не "насиловать" себя убеждениями и волей. Не ломать себя потому что решил примерить на себя чей-то образ а он не подходит.
+- Критиковать себя это описывать полную картину не преукрашивая и не преуменьшая. Старатся апеллировать фактами.
+- Принимать себя - это воспринимать себя критически и воспринимать здесь и сейчас. И уже планировать от этой точки. Поэтому важно отслеживать вписьменом виде и аналетически подходит к своим желанным изминениям. Критически мыслить и фиксировать свой прогресс. 
+- Воспринимать спокойно весь свой опыт через весь пройденный жизненый путь.
+- Заботить о себе и любить(слушать, чувствовать) свое тело. Не переутомляться, не заебывать, обеспечивать себя общением, двжением, физической нагрузкой, отдыхом.
+- Уважать себя. Само валидизация "В любых ситуациях в которые я бы не попадал в жизни, я адекватный, правильный и цельный, все что со мной происходит это правильно хорошо, естественно и подругому просто быть не может" Позволение себе быть, позволение себе быть.
+- Позволять себе испытывать весь спектр эмоции включая гнев и проявлять что бы не копить его в себе. 
+- Любовь к себе - это такая степень культурного развития человека, при которой ты не подвергаешь насилию даже самого себя. И тогда ты перестаешь подвергать насилию и всех близких и окружающих
+- Страх отвержения и утраты любви, внимания заставляет нас быть не такими какие мы есть. Мы начинаем унижатся, пытаемся заслуживать любовь, делать то что нам не хочется в надежде ухватится за нитку надежды. И в этот момент мы теряем себя. Из-за страха потери любви и это становится мотиватором нашего внутреннего критичного Я ~~Эго~~.
+- Вспомнить себя в тот момент и то состояние когда страха утраты любви не было. И вернуть его.
+- Единственным кто может тебя любить по настоящему (без условностей) это ты сам. 
+- Я люблю себя, я люблю и одобряю себя, Я люблю и прощаю себя, Я принимаю весь свой опыт, 
 </br>
 ---
 ###### zero-link </br>
