--- a/Мозг и его ритмы.md
+++ b/Мозг и его ритмы.md
@@ -27,12 +27,15 @@ Tags: #
 - Тау-ритм отвечает блокадой на звуковые стимулы. Сигма-ритм наблюдается в ЭЭГ, но полностью блокируется в развитой фазе быстрого сна.
 
 ### Тета - Ритм
+
+^1063a9
+
 - 4 — 8 Гц. Амплитуда находится в пределах 20 —  100 мкВ
 - Регистрируется во фронтальных зонах и гиппокампе.
 ![](https://upload.wikimedia.org/wikipedia/commons/5/58/Normal_EEG_of_mouse.png)
 - Тета-волны генерируют тета-ритм, нейронные колебания в мозгу, лежащие в основе различных аспектов познания и поведения, включая обучение, память и пространственную ориентацию у многих животных.
 - Когда спокойное, расслабленное бодрствование переходит в сонливость. Колебания в головном мозге становятся более медленными и ритмичными. Это состояние называется ещё «сумеречным», поскольку в нём человек находится между сном и бодрствованием.
-- В норме тета-волны связаны с [изменением состояния сознания](https://ru.wikipedia.org/wiki/%D0%98%D0%B7%D0%BC%D0%B5%D0%BD%D1%91%D0%BD%D0%BD%D0%BE%D0%B5_%D1%81%D0%BE%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B7%D0%BD%D0%B0%D0%BD%D0%B8%D1%8F "Изменённое состояние сознания"). асто такое состояние сопровождается видением неожиданных, сноподобных образов, сопровождаемых яркими воспоминаниями. Большинство людей засыпают, как только в головном мозге появляется заметное количество тета-волн.
+- В норме тета-волны связаны с [изменением состояния сознания](https://ru.wikipedia.org/wiki/%D0%98%D0%B7%D0%BC%D0%B5%D0%BD%D1%91%D0%BD%D0%BD%D0%BE%D0%B5_%D1%81%D0%BE%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B7%D0%BD%D0%B0%D0%BD%D0%B8%D1%8F "Изменённое состояние сознания"). такое состояние сопровождается видением неожиданных, сноподобных образов, сопровождаемых яркими воспоминаниями. Большинство людей засыпают, как только в головном мозге появляется заметное количество тета-волн.
 - Высокий уровень тета-ритма может показывать состояние сонливости и утомления, что может быть проявлением астенического синдрома, хронического стресса.
 - усиливается при эмоциональном напряжении
 
