--- a/Эмоции.md
+++ b/Эмоции.md
@@ -3,6 +3,7 @@ Tags: #
 
 ---
 # Title
+`Эмоции вас не убьют, а вот их подавление - может`
 - Относиться к лимбической системенаходится в подкорковых структурах мозга
 - Градация: 1-3 — слабые; 4-7 — средние; 8 -10 —  сильные.
 	- Управление до 7, выше уже стресс
@@ -31,6 +32,7 @@ Tags: #
 - Вторичные эмоции — выученные эмоции.
 	1. Когда вы получаете негативную оценку за какую базовую эмоцию. Чувство вины за злость. Чувство вины за страх. Стыд страха. Стыд грусти. Чувство вины за смерть (чьи-то похроны). Стыд любви, стыдно и страшно выражать любовь. 
 	2. Когда родители акцентируют эмоции которые удобны им. Человек без страха, стыда, грусти с проблемами перфекцианизма и страхом будущего. Человек без негативных эмоции с жалостью ко всем, но несчастный внутри от противоречии которые он не может понять т.к. негативные эмоции не должны вызывать эмоции их нет для ее рационального.   
+![[Emotion_spectre.jpg|700]]
 
 ### Как понмать, осозновать и выражать свой эмоции: 
 # Эмоцианальный интелект
@@ -41,6 +43,9 @@ Tags: #
 
 
 ###### Гнев:
+
+^955886
+
 Бешенство; ярость; ненависть; истирия; злость; раздражение; презрение; негодование; обида; ревность; уязвление; досада; неприязнь; возмущение; отвращение.
 1. Нарушение границ, прекращение какого-то приятного события. Вторжение в ваши границы и создание дискомфорта. Оказывают давление, отвергают, критикуют, сепарация.
 2. **Внутренее восприятие**: Учащенные сердцебиение, дыхание, мычешное напряжение: кулаки, скулы, брови.
@@ -91,13 +96,124 @@ Tags: #
 # Тренировка внутреннего восприятия:
 Набляюдать за собой и по любому поводу спрашивать себя, что я сейчас чувствую?
 
-# Осознание своей эмоции:
-1. Какое событие вызвало эту эмоцию?
-2. Что я сейчас думаю?
-3. Что я сейчас испытываю?
-4. Какие есть физические реакции?
+## Осознание своей эмоции:
+1. Что случилось? Какое событие вызвало эту эмоцию?
+2. Что я подумал, сейчас думаю?
+3. Что я почувствовал, сейчас испытываю?
+4. Что я сделал? Какие есть физические реакции?
 5. Как я собираюсь действовать? Каким будет мое поведение
+- Заполнение дневника, таблички в течении недели, что бы понять какие чувства у вас преобладают.
+
+### Выражение эмоции
+Любая эмоция должна быть варжена максимально полно, ярко и честно.
+###### Способы варжения:
+1. Не вербальный: тон голоса, мимика, жестикуляция, интонация, поза.
+	1. Задействуются зеркальные нейроны.
+2. Вербально в виде слов.
+3. Поступки.
+- Восхищение: это когда вы хвалите человека, за то что в нем есть. Внешние признаки, характерные особенности, ум, поведение. Если вам что-то нравится в человеке обязательно ему об этом скажите. Нравится время проводить, добрая, заботливая. Умный, хороший совет, отличная тренировка,  
+- Благодарность: за то что он сделал, как себя ведет. 
+- Мне безумно нравится проводить с тобой время, скучаю, счастлив находится рядом с тобой, думать о тебе. Его качества, талант, ум, жизнерадостность, его поступки, работа. 
+
+ Злость:
+ - Не вербально строгость, нарпяженность, взгляд.
+ - Меня сегодня выбесили.
+ Стыд:
+ - Показывать только вербально.
+ - Если вы сделали и почувствовали, что вы сделали что то плохое, но не знаете что. Озвучтье это.
+Отвращение:
+- Старайтесь выражать в виде поступков.
+
+# Глубинное чувство вины:
+
+- После коммуникации с родителями сжимается горло, не хочется общатся с ними. Послевкусие вязкое и неприятное. Которое заставляет действовать
+- `Создание активной деятельности когда мама входит(ла) в комнату`
+- Становимся угодливыми извиняемся
+- А есть другое чувство вины ГЛУБИННОЕ, оно мало заметное и можно не понимать, что оно есть. Оно перманентное, глубоко посаженное и становится частью вас.
+- Основные признаки:
+	1.  Не хочется просить людей, напрягать. Тяжело просить что-то сделать, и просить что бы перестал что-то делать. 
+	2. Когда вас хвалят, делают что-то хорошее вам становится ужасно не ловко. Вы чувствуете излишнюю через мерную благодарность.
+	3. Вы являетесь трудовыми лошадками и трудоголиками. Перфекционистами. Добиваетесь высот в работе. Карьеристы. Взваливание на себя очень много ответственности.
+	4. Избигаете отношении, не вступаете в них. Думаете что будете абузой. Сделаете другого чловека несчастным. Не хочется навязыватся, мешать. Если у вас есть отношения вы становитесь слишком угодливым. Перекос в сторону давать и должен.
+		- Люди с вами не считаются, не уважают вас. Ничего не хотят для вас делать. Ждут когда вы для сами все сделаете.
+		- Любой человек садится на шею если им позволять это делать.
+	5. Если вы являетесь очень восприимчивым к критике.    
+- Родители могут жаловаться на жизнь и говорит в целом что они несчастны, но ввиду восприятие это может переносится на себя маленького.
+	- После родов я стала хуже себя чувствовать, после того как родила тебя. 
+	- НЕ ВЕРБАЛЬНОЕ восприятие отношений к себе и между людми.
+	- Женитьба родителей по залету, вы чувствуете себя виноватым.
+- Появляются глубинные суждения о себе что я плохой я все испортил. Я не имею право что бы меня любили. Я изначально во всем виноват и не заслуживаю хорошего отношения. Меня не должно быть я не желанный. 
+	- Если человек со мной то он оказывает мне услугу. 
+### План действии:
+1. Осознать что у вас есть глубинное чувство вины. 
+2. Понять и убедить себя что вы в этом не виноваты. И часто родители никак не хотели вам поднасрать. Просто они сами незнали этого и зафакапили вам структуру мозга. И возможно годами это укрепляли. 
+3. Когда у вас мало энергии, ресурсов это схема может подключится и некоторое время присутствовать в вашей жизни. 
+4. Понять причину. Причина развода, здоровья, несчастья, умер, выбор не тотого пути. 
+5. Оценить в весомом аргументе, процентном отношении в чем вы их сделали несчастными и насколько.
 6.  
+
+Факторы: Биологические, социальные, психологические
+Биологические - Сангвиник, экстраверт (сильный, быстрый, уравновешеный)
+1. Предраспалагающие:  
+	1. Мать: Холерик - Сангвиник
+	2. Отец: Меланхолик - Флегматик 
+2. Способствующие: 
+	1. Чувство вины: одежда, неопрятность, плохой вкус. Унижение, 
+	2. Стыд: ленивый, неграмотность, внешний вид, поведение, пластика. 
+	3. Хвала: умный, красивый (мое роли тут нет), гадтакой (хуйзнает хитрость наверно).
+3. Провоцирующие факторы:
+	1. Мать: росла без отца; показывала силу защищала брата; бедно; рано уехала из дома 14-15лет; холодность от матери(бабушки) контроль - наказание; первый муж пил; Развал совка Лишение работы стабильности; Сложность в заработке, потереность; Хотела брата или сестру для сына;  
+	2. Отец:  рос практически без отца; бедно; воспитывал алкаш-дядя;  рано уехала из дома 8-10лет; неопределеность; беспомощность; потеряность; холодность от матери(бабушки) и отца(дедушки); Дядя бил тётю; Развал совка Лишение работы стабильности; Сложность в заработке, потереность;  Комплекс низкого роста; Никогда не было своего места в доме; Фактически некудо было пойти. Аскетизм;
+4. Поддерживающий фактор: 
+	1. Мать: Критика отца; Послушалась отца об аборте и жалела об этом;  
+	2. Отец: Малоэмоциональный; отказался от рождения 3ого ребёнка страх от своей многодетной семьи; Выбрал в жёны женщину с ребёнком  
+- Теперь подсчитать какой процент я занимаю во всех их факторах. 2-5% влияния. 
+
+
+# Зависть:
+Белая:
+- Идентификация конкретной черта и перенятия ее на себя. 
+Черная:
+- Ментально ограничиваете себя тем что не сможете перенять эту черту, как смежные характеристики слишком разнятся. 
+- Убеждения того что я не смогу стать таким как он.
+- Понимание чувство зависти. Чему именно я завидую?
+- Почему я не смогу идентифицироваться с этим человеком. Вычленить те разности и тогда мозгу будет проще адаптировать эти качества под себя 
+
+# Тирания:
+- Агрессия
+- ![[Эмоции#Гнев]]
+1. В спокойном состоянии заявляем о своем решении прекратить гнев, обсуждение системы штрафов и вознаграждений. 
+2. [Список](https://youtu.be/KJhwua6SAoI?t=1204): список достойнств, список недостатков.
+3. Вывод  избыток энергии из отношений, выплеск. Спорт, бизнесс, музыка, хобби, 2ая работа. Вероятно вы не довольны чем то еще в своей основной деятельности.
+4. Следить за своим уровнем стресса не завышать к себе требования
+5. Освойте ненасильственнуб форму общения. 
+
+# [Ревность](https://www.youtube.com/watch?v=5wXXOKr4-4k&list=PLIjqXVLsr53Hss0aD-uwX4GFZGfadePvR&index=10&ab_channel=%D0%95%D0%B2%D0%B3%D0%B5%D0%BD%D0%B8%D1%8F%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D0%B5%D1%86%D0%BA%D0%B0%D1%8F)
+- Заниженная самооценка по причине недолюбливания в раннем периоде детства. Или в связи травмой измены объекта вашей любви во взрослой жизни. 
+
+# [Стыд](https://youtu.be/eo1sVGwDcv0)
+- Стыд имеет более глубоку травму, чем вина. Чуство стыда удущающее, глубинное, заноза, разедающее, затягивающее, ненавистное, парализующее, жгущее из нутри. Хочется убежать, заглушить, исчезнуть, испарится.
+###### Тренировка:
+1.  Сделать это чувство своим врагом.
+2. Научить созновать это чувство, рассмотреть из под микроскоп с разных углов. Обдумать. Осваиватся на территории стыда, осозновая чувства и мысли которые этот стыд создают. 
+3. Репетировать выражая эмоции. Да выражать эмоции это тяжело! Уезвимость, страх, вохможная боль. Возможно вас стыдили или обстановка была такая, что не давала вам выражать свои эмоции в полной мере.
+
+
+# Любовь
+- Романтическая любовь. Влюбленость
+	- Не можем контролировать это чувство. Оно контролирует нас. Мы в нем как рыбка в воде. 
+	- Не можем логически и адекватно себя вести.
+	- Жажда потверждения любви, а не дара любви для самутверждения и повышения ценности за счет других. 
+	- Преобладает сексуальность на первом месте
+	- Дофамин
+- Натоящая любовь.
+	- Радость, интерес, не требующая привлекателность, 
+	- Благодарность и жалость
+	- Вера, надежда, воодушевление, вдохновение
+	- Вы являетесь источником любви. И действуете во благо не только себя, но и человека.
+	- Нежность и Сексуальность
+	- Дофамин аксетацин
+- Дружба это не полноценная любовь если бы часть спектра света поглащалось бы объектом не полностью. Намеренная фильтрация позволит перенаправить эмоции не зацикливаясь. 
 
 </br>
 ---
@@ -106,6 +222,8 @@ Tags: #
 </br>
 ---
 ###### Links </br>
+
+https://www.youtube.com/watch?v=1SuGO8Hq3CI&list=PLIjqXVLsr53Hss0aD-uwX4GFZGfadePvR&index=9&ab_channel=%D0%95%D0%B2%D0%B3%D0%B5%D0%BD%D0%B8%D1%8F%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D0%B5%D1%86%D0%BA%D0%B0%D1%8F
  &emsp; | &emsp; 
 
 
