--- a/Мозг потенциал.md
+++ b/Мозг потенциал.md
@@ -5,8 +5,10 @@ Tags: #
 # Title
 
 Хобби: занятие хобби в течение 1 часа или более каждый день может защитить от деменции в пожилом возрасте. Подразумевает любое увлечение которое вам нравится. Вспомните дедов на улице рубяшихся в карты, шахматы и домино )
-1. [[Чтение]] 
-2. [[Музыка]]
+1. [[Чтение]]
+2. [[Координация - Танцы]]
+3. [[Музыка]] 
+4. 
 
 
 
