--- a/Нейромедиаторы.md
+++ b/Нейромедиаторы.md
@@ -11,7 +11,7 @@ Tags: #
 [[Глутамат]] — – антипод ГАМК, все наоборот. Быстрое мышление, возможна нервозность.
 [[Ацетилхолин]] — нормализатор работы мозга и тела. Недостаток способен вызвать Болезнь Альцгеймера, избыток – заторможенность.
 [[Нейротрофины]]
-[[Эндокринная система|Гормоны]] вырабатываются чаще в железах (нейромедиаторы чаще в нейронах) и выбрасываются в кровь.
+[[Эндокринная система (Гормоны)|Гормоны]] вырабатываются чаще в железах (нейромедиаторы чаще в нейронах) и выбрасываются в кровь.
 
 [[Ноотропы]] любые вещества, которые могут прокачать тебе интеллект (через нейромедиаторы, рецепторы, нейротрофические факторы…). Можно выделить лекарства и БАДы (добавки: бакопа, теанин, кофеин…)
 
