--- a/Семенники.md
+++ b/Семенники.md
@@ -1,6 +1,6 @@
 2022-03-1420:42
 Tags: #
-мужские половые [железы](https://wp.wiki-wiki.ru/wp/index.php/%D0%96%D0%B5%D0%BB%D0%B5%D0%B7%D1%8B "Железы") животных. В семенниках происходит [сперматогенез](https://wp.wiki-wiki.ru/wp/index.php/%D0%A1%D0%BF%D0%B5%D1%80%D0%BC%D0%B0%D1%82%D0%BE%D0%B3%D0%B5%D0%BD%D0%B5%D0%B7 "Сперматогенез"), также в них (в основном у млекопитающих и в частности у человека [[Яйчки]]), в интерстициальных [клетках Лейдига](https://wp.wiki-wiki.ru/wp/index.php/%D0%9A%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_%D0%9B%D0%B5%D0%B9%D0%B4%D0%B8%D0%B3%D0%B0 "Клетки Лейдига"), совокупность этих клеток называют ещё [пубертатной железой](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%83%D0%B1%D0%B5%D1%80%D1%82%D0%B0%D1%82%D0%BD%D0%B0%D1%8F_%D0%B6%D0%B5%D0%BB%D0%B5%D0%B7%D0%B0 "Пубертатная железа"), продуцируется главный мужской гормон — [тестостерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%A2%D0%B5%D1%81%D1%82%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Тестостерон"), в этих же клетках образуются и другие неактивные соединения андрогенного ряда: [андростендион](https://wp.wiki-wiki.ru/wp/index.php/%D0%90%D0%BD%D0%B4%D1%80%D0%BE%D1%81%D1%82%D0%B5%D0%BD%D0%B4%D0%B8%D0%BE%D0%BD "Андростендион"), [дегидроэпиандростерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%94%D0%B5%D0%B3%D0%B8%D0%B4%D1%80%D0%BE%D1%8D%D0%BF%D0%B8%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Дегидроэпиандростерон") — и небольшое количество женских половых гормонов — [эстрогенов](https://wp.wiki-wiki.ru/wp/index.php/%D0%AD%D1%81%D1%82%D1%80%D0%BE%D0%B3%D0%B5%D0%BD "Эстроген") и [прогестинов](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%80%D0%BE%D0%B3%D0%B5%D1%81%D1%82%D0%B8%D0%BD "Прогестин").
+мужские половые [железы](https://wp.wiki-wiki.ru/wp/index.php/%D0%96%D0%B5%D0%BB%D0%B5%D0%B7%D1%8B "Железы") животных. В семенниках происходит [сперматогенез](https://wp.wiki-wiki.ru/wp/index.php/%D0%A1%D0%BF%D0%B5%D1%80%D0%BC%D0%B0%D1%82%D0%BE%D0%B3%D0%B5%D0%BD%D0%B5%D0%B7 "Сперматогенез"), также в них (в основном у млекопитающих и в частности у человека [[Яйчки]]), в интерстициальных [клетках Лейдига](https://wp.wiki-wiki.ru/wp/index.php/%D0%9A%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_%D0%9B%D0%B5%D0%B9%D0%B4%D0%B8%D0%B3%D0%B0 "Клетки Лейдига"), совокупность этих клеток называют ещё [пубертатной железой](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%83%D0%B1%D0%B5%D1%80%D1%82%D0%B0%D1%82%D0%BD%D0%B0%D1%8F_%D0%B6%D0%B5%D0%BB%D0%B5%D0%B7%D0%B0 "Пубертатная железа"), продуцируется главный мужской гормон — [тестостерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%A2%D0%B5%D1%81%D1%82%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Тестостерон"), в этих же клетках образуются и другие неактивные соединения андрогенного ряда: [андростендион](https://wp.wiki-wiki.ru/wp/index.php/%D0%90%D0%BD%D0%B4%D1%80%D0%BE%D1%81%D1%82%D0%B5%D0%BD%D0%B4%D0%B8%D0%BE%D0%BD "Андростендион"), [дегидроэпиандростерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%94%D0%B5%D0%B3%D0%B8%D0%B4%D1%80%D0%BE%D1%8D%D0%BF%D0%B8%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Дегидроэпиандростерон") — и небольшое количество женских половых гормонов —[[Эстроген]]ов и [прогестинов](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%80%D0%BE%D0%B3%D0%B5%D1%81%D1%82%D0%B8%D0%BD "Прогестин").
 
 ---
 # Title
