--- a/Тестостерон.md
+++ b/Тестостерон.md
@@ -1,11 +1,13 @@
-2022-03-1522:06
+	2022-03-1522:06
 Tags: #
 
 ---
 # Title
 Секретируется из холестерина [клетками Лейдига](https://wp.wiki-wiki.ru/wp/index.php/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BB%D0%B5%D1%82%D0%BA%D0%B0_%D0%9B%D0%B5%D0%B9%D0%B4%D0%B8%D0%B3%D0%B0 "Интерстициальная клетка Лейдига") [семенников](https://wp.wiki-wiki.ru/wp/index.php/%D0%A1%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D0%B8%D0%BA%D0%B8 "Семенники") у мужчин, а также в небольших количествах [яичниками](https://wp.wiki-wiki.ru/wp/index.php/%D0%AF%D0%B8%D1%87%D0%BD%D0%B8%D0%BA%D0%B8 "Яичники") у [женщин](https://wp.wiki-wiki.ru/wp/index.php/%D0%96%D0%B5%D0%BD%D1%89%D0%B8%D0%BD%D0%B0 "Женщина") и [корой надпочечников](https://wp.wiki-wiki.ru/wp/index.php/%D0%9D%D0%B0%D0%B4%D0%BF%D0%BE%D1%87%D0%B5%D1%87%D0%BD%D0%B8%D0%BA%D0%B8#.D0.9A.D0.BE.D1.80.D0.BA.D0.BE.D0.B2.D0.BE.D0.B5_.D0.B2.D0.B5.D1.89.D0.B5.D1.81.D1.82.D0.B2.D0.BE_.D0.BD.D0.B0.D0.B4.D0.BF.D0.BE.D1.87.D0.B5.D1.87.D0.BD.D0.B8.D0.BA.D0.BE.D0.B2 "Надпочечники") и у мужчин, и у женщин. Является продуктом периферического [метаболизма](https://wp.wiki-wiki.ru/wp/index.php/%D0%9C%D0%B5%D1%82%D0%B0%D0%B1%D0%BE%D0%BB%D0%B8%D0%B7%D0%BC "Метаболизм"), отвечает за [вирилизацию](https://wp.wiki-wiki.ru/wp/index.php/%D0%92%D0%B8%D1%80%D0%B8%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F "Вирилизация") у мальчиков и андрогенизацию у девочек.
 ## Активность тестостерона
-Сам тестостерон биологически малоактивен и слабо связывается с андрогенными рецепторами (является фактически [прогормоном](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%80%D0%BE%D0%B3%D0%BE%D1%80%D0%BC%D0%BE%D0%BD%D1%8B "Прогормоны")), и, прежде чем подействовать на андрогенные рецепторы клеток органов-мишеней, он должен подвергнуться непосредственно в клетках восстановлению в 5α-позиции углеродного скелета с помощью [фермента](https://wp.wiki-wiki.ru/wp/index.php/%D0%A4%D0%B5%D1%80%D0%BC%D0%B5%D0%BD%D1%82%D1%8B "Ферменты") [5α-редуктазы](https://wp.wiki-wiki.ru/wp/index.php/5-%D0%B0%D0%BB%D1%8C%D1%84%D0%B0-%D1%80%D0%B5%D0%B4%D1%83%D0%BA%D1%82%D0%B0%D0%B7%D0%B0 "5-альфа-редуктаза"). При этом образуется биологически активная форма тестостерона — [дигидротестостерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%94%D0%B8%D0%B3%D0%B8%D0%B4%D1%80%D0%BE%D1%82%D0%B5%D1%81%D1%82%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Дигидротестостерон").
+Сам тестостерон биологически малоактивен и слабо связывается с андрогенными рецепторами (является фактически [прогормоном](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D1%80%D0%BE%D0%B3%D0%BE%D1%80%D0%BC%D0%BE%D0%BD%D1%8B "Прогормоны")), и, прежде чем подействовать на андрогенные рецепторы клеток органов-мишеней, он должен подвергнуться непосредственно в клетках восстановлению в 5α-позиции углеродного скелета с помощью [фермента](https://wp.wiki-wiki.ru/wp/index.php/%D0%A4%D0%B5%D1%80%D0%BC%D0%B5%D0%BD%D1%82%D1%8B "Ферменты") [5α-редуктазы](https://wp.wiki-wiki.ru/wp/index.php/5-%D0%B0%D0%BB%D1%8C%D1%84%D0%B0-%D1%80%D0%B5%D0%B4%D1%83%D0%BA%D1%82%D0%B0%D0%B7%D0%B0 "5-альфа-редуктаза"). При этом образуется биологически активная форма тестостерона — [[Дигидротестостерон]]
+- 5-альфа-редуктаза преобразует мужской половой [гормон](https://wp.wiki-wiki.ru/wp/index.php/%D0%93%D0%BE%D1%80%D0%BC%D0%BE%D0%BD "Гормон") [тестостерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%A2%D0%B5%D1%81%D1%82%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Тестостерон") в более сильнодействующий [андроген](https://wp.wiki-wiki.ru/wp/index.php/%D0%90%D0%BD%D0%B4%D1%80%D0%BE%D0%B3%D0%B5%D0%BD "Андроген") [дигидротестостерон](https://wp.wiki-wiki.ru/wp/index.php/%D0%94%D0%B8%D0%B3%D0%B8%D0%B4%D1%80%D0%BE%D1%82%D0%B5%D1%81%D1%82%D0%BE%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%BD "Дигидротестостерон"), а также участвует в образовании нейростероидов [аллопрегнанолона](https://wp.wiki-wiki.ru/wp/index.php/%D0%90%D0%BB%D0%BB%D0%BE%D0%BF%D1%80%D0%B5%D0%B3%D0%BD%D0%B0%D0%BD%D0%BE%D0%BB%D0%BE%D0%BD "Аллопрегнанолон") и [THDOC](https://wp.wiki-wiki.ru/wp/index.php/THDOC "THDOC").
+- Фермент производится во многих тканях мужчин и женщин, особенно в репродуктивном тракте, в коже, в семенных пузырьках, в простате, а также в нервной системе.
 
 ## Свойства
 Синтез и секреция тестостерона регулируются лютеинизирующим и фолликулостимулирующими гормонами [гипофиза](https://wp.wiki-wiki.ru/wp/index.php/%D0%93%D0%B8%D0%BF%D0%BE%D1%84%D0%B8%D0%B7 "Гипофиз").
