--- a/Чтение.md
+++ b/Чтение.md
@@ -16,6 +16,7 @@ Tags: #
 	4. Чтение систематичное
 	5. Как меня приобщили к чтение. жыза
 	6. Не насильственное чтение
+- выпускник ВУЗа из США читает уже 17 книг, а у последних даже IQ статистически выше. Если у вас не 17, представляете, какой заложен потенциал роста в каждом из нас? А что, если будет 20 книг? Речь идет о достойных работах, не о глупых детективах с ближайшей ж/д станции, которые больше похожи на жвачку для ума. Хотя есть и хорошие детективы.
 </br>
 ---
 ###### zero-link </br>
