--- a/Эндокринная система (Гормоны).md
+++ b/Эндокринная система (Гормоны).md
@@ -12,7 +12,7 @@ Tags: #
 - щитовидная железа
 - [тимус](https://ru.wikipedia.org/wiki/%D0%98%D0%BC%D0%BC%D1%83%D0%BD%D0%BE%D0%BF%D0%B0%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B5_%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%D1%8B_(%D0%BF%D0%B0%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D0%B0%D0%BD%D0%B0%D1%82%D0%BE%D0%BC%D0%B8%D1%8F) "Иммунопатологические процессы (патологическая анатомия)")
 - островки Лангерганса поджелудочной железы
-- надпочечники
+- [[надпочечники]]
 - параганглии
 - половые железы (_гонады_).
 	- [[Семенники]]
@@ -27,6 +27,7 @@ Tags: #
 [[Тестостерон]] – «тест», мужской гормон (есть и у женщин). Драйв, либидо, мотивация, настроение. 
 [[Гормон Роста]] – «ГР», растит практически все ткани организма. Есть потенциал и для улучшения работы мозга. Есть и высокие риски. Его недостаток, как и избыток – предвестники онкологии
 
+![[Endocrine_gland.png]]
 </br>
 ---
 ###### zero-link </br>
