--- a/Эстрадиол.md
+++ b/Эстрадиол.md
@@ -3,7 +3,9 @@ Tags: #
 
 ---
 # Title
+общее собирательное название подкласса [стероидных](https://wp.wiki-wiki.ru/wp/index.php/%D0%A1%D1%82%D0%B5%D1%80%D0%BE%D0%B8%D0%B4%D1%8B "Стероиды") [женских половых](https://wp.wiki-wiki.ru/wp/index.php/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B2%D1%8B%D0%B5_%D0%B3%D0%BE%D1%80%D0%BC%D0%BE%D0%BD%D1%8B "Половые гормоны") [гормонов](https://wp.wiki-wiki.ru/wp/index.php/%D0%93%D0%BE%D1%80%D0%BC%D0%BE%D0%BD%D1%8B "Гормоны"), производимых, в основном, [фолликулярным аппаратом яичников](https://wp.wiki-wiki.ru/wp/index.php/%D0%A4%D0%BE%D0%BB%D0%BB%D0%B8%D0%BA%D1%83%D0%BB_%D1%8F%D0%B8%D1%87%D0%BD%D0%B8%D0%BA%D0%B0 "Фолликул яичника") у [женщин](https://wp.wiki-wiki.ru/wp/index.php/%D0%96%D0%B5%D0%BD%D1%89%D0%B8%D0%BD%D0%B0 "Женщина").
 
+- В небольших количествах [[Эстроген]] производятся также [[Яйчки]]ами у мужчин и [корой надпочечников](https://wp.wiki-wiki.ru/wp/index.php/%D0%9A%D0%BE%D1%80%D0%B0_%D0%BD%D0%B0%D0%B4%D0%BF%D0%BE%D1%87%D0%B5%D1%87%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2 "Кора надпочечников") у обоих полов.
 </br>
 ---
 ###### zero-link </br>
